--- a/formmahasiswa.html
+++ b/formmahasiswa.html
@@ -136,7 +136,7 @@
                     <input type="checkbox" id="musik" name="hobi" value="Musik">
                     <label for="musik">Musik</label>
                     
-                    <input type="checkbox" id="traveling" name="hobi" value="Gaming">
+                    <input type="checkbox" id="gaming" name="hobi" value="Gaming">
                     <label for="gaming">Gaming</label>
                 </div>
             </fieldset>
